Load elect_net_gen_solar data.

--- a/SolarPower.ipynb
+++ b/SolarPower.ipynb
@@ -34,11 +34,14 @@
     "import datetime as dt  # Work with datetime types.\n",
     "import os  # Interact with the operating system.\n",
     "import sys  # Read system parameters.\n",
+    "from io import StringIO  # Read and write strings as files\n",
+    "from urllib.parse import urlparse  # Parse url and extract path component\n",
     "\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np  # Work with multi-dimensional arrays and matrices.\n",
     "import pandas as pd  # Manipulate and analyze data frames.\n",
+    "import requests  # Send HTTP requests\n",
     "import sklearn  # Perform feature engineering and machine learning.\n",
     "import statsmodels  # Perform statistical modeling.\n",
     "\n",
@@ -50,6 +53,54 @@
     "print(\"- statsmodels {}\".format(statsmodels.__version__))\n",
     "print(\"- Matplotlib {}\".format(matplotlib.__version__))\n",
     "print(\"- Python {}\\n\".format(sys.version))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e53989b5-8ac6-4bb4-8cb0-96f4f1dfc260",
+   "metadata": {},
+   "source": [
+    "# Load Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "69ec5a95-c6bf-40e8-ae72-73047a7a4fbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 591 records form elect_net_gen_solar.csv.\n",
+      "          ElectNetGen\n",
+      "Date                 \n",
+      "2021 11      7873.778\n",
+      "2021 12      6354.878\n",
+      "2022 01      8003.896\n",
+      "2022 02      9202.560\n",
+      "2022 03     11890.566\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Capture URL\n",
+    "url = \"https://raw.githubusercontent.com/tyrantdavis/datasets/refs/heads/main/elect_net_gen_solar.csv\"\n",
+    "request = requests.get(url).text\n",
+    "\n",
+    "# Save as dataframe and copy\n",
+    "original = pd.read_csv(StringIO(request), index_col=\"Date\")\n",
+    "df = original.copy()\n",
+    "\n",
+    "# Parse URL\n",
+    "parsed_url = urlparse(url)\n",
+    "path = parsed_url.path\n",
+    "filename = os.path.basename(path)\n",
+    "\n",
+    "\n",
+    "print(f\"Loaded {len(df)} records form {filename}.\")\n",
+    "print(df.tail())"
    ]
   }
  ],
