Get to know the dataset.

--- a/SolarPower.ipynb
+++ b/SolarPower.ipynb
@@ -102,6 +102,161 @@
     "print(f\"Loaded {len(df)} records form {filename}.\")\n",
     "print(df.tail())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7a22be2-6790-43b5-bb52-a17ebaf9a10c",
+   "metadata": {},
+   "source": [
+    "# Get Acquainted with the Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0935af05-bbdf-4261-8aeb-c49e2ad96582",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 591 entries, 1973 01  to 2022 03 \n",
+      "Data columns (total 1 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   ElectNetGen  459 non-null    float64\n",
+      "dtypes: float64(1)\n",
+      "memory usage: 9.2+ KB\n",
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ElectNetGen</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1973 01</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1973 02</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1973 03</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1973 04</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1973 05</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021 11</th>\n",
+       "      <td>7873.778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021 12</th>\n",
+       "      <td>6354.878</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022 01</th>\n",
+       "      <td>8003.896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022 02</th>\n",
+       "      <td>9202.560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022 03</th>\n",
+       "      <td>11890.566</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>591 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ElectNetGen\n",
+       "Date                 \n",
+       "1973 01           NaN\n",
+       "1973 02           NaN\n",
+       "1973 03           NaN\n",
+       "1973 04           NaN\n",
+       "1973 05           NaN\n",
+       "...               ...\n",
+       "2021 11      7873.778\n",
+       "2021 12      6354.878\n",
+       "2022 01      8003.896\n",
+       "2022 02      9202.560\n",
+       "2022 03     11890.566\n",
+       "\n",
+       "[591 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(df.info())\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a9a6f98-09cb-4f93-8ecd-3fbca13e1d66",
+   "metadata": {},
+   "source": [
+    "**Spotlights**\n",
+    "\n",
+    "• The data frame consists of a single column named ElectNetGen.  \n",
+    "• ElectNetGen contains floating point numbers.  \n",
+    "• The data frame has a Date index that captures the month and year of each record. This will be converted to a datetime format for simplicity.  \n",
+    "• The net electricity generated is quantified in gigawatt-hours (GWh), equivalent to one million kilowatt-hours (kWh).  \n",
+    "• Some of the earlier years have missing entries. This is understandable as solar power is a relatively recent development. However, these missing values will need to be addressed. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1c76f8f-475a-4b1d-9965-9f3adb3311fa",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
