Format 'Date' index for processing.

--- a/SolarPower.ipynb
+++ b/SolarPower.ipynb
@@ -256,7 +256,37 @@
    "cell_type": "markdown",
    "id": "c1c76f8f-475a-4b1d-9965-9f3adb3311fa",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Process `Date` Index to Datetime Format Conversion "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "088934a1-acfe-4860-8679-0a2e5d347a78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Date index is now properly formatted.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/yk/_g2wb8q55v9gmytn656hxt7h0000gp/T/ipykernel_38862/2223087393.py:1: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df.index = pd.to_datetime(df.index).to_period(\"M\")  # Specify months.\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.index = pd.to_datetime(df.index).to_period(\"M\")  # Specify months.\n",
+    "df.head()\n",
+    "print(\"The Date index is now properly formatted.\")"
+   ]
   }
  ],
  "metadata": {
