Remove previous months
Eliminate months prior to Jan 2015 where the production of solar-powered electricity was low.

--- a/SolarPower.ipynb
+++ b/SolarPower.ipynb
@@ -327,6 +327,135 @@
     "\n",
     "There has been a notable increase in solar energy usage over the years, with the most significant growth occurring around the mid-2010s. Given that prior years experienced minimal to no electricity generation from solar power, it may be prudent to exclude that data from the analysis. Therefore, all measurements recorded before 2015 will be treated as outliers."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2f66493-6ee7-46cf-8d12-366a9edee996",
+   "metadata": {},
+   "source": [
+    "# Eliminate Months with Minimal Solar-Power Generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8741847a-3739-4e77-b00f-00ef7da34680",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ElectNetGen</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2015-01</th>\n",
+       "      <td>1155.351</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-02</th>\n",
+       "      <td>1483.554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-03</th>\n",
+       "      <td>2072.257</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-04</th>\n",
+       "      <td>2379.118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-05</th>\n",
+       "      <td>2504.149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-11</th>\n",
+       "      <td>7873.778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12</th>\n",
+       "      <td>6354.878</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01</th>\n",
+       "      <td>8003.896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02</th>\n",
+       "      <td>9202.560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-03</th>\n",
+       "      <td>11890.566</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>87 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         ElectNetGen\n",
+       "Date                \n",
+       "2015-01     1155.351\n",
+       "2015-02     1483.554\n",
+       "2015-03     2072.257\n",
+       "2015-04     2379.118\n",
+       "2015-05     2504.149\n",
+       "...              ...\n",
+       "2021-11     7873.778\n",
+       "2021-12     6354.878\n",
+       "2022-01     8003.896\n",
+       "2022-02     9202.560\n",
+       "2022-03    11890.566\n",
+       "\n",
+       "[87 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove designated outliers\n",
+    "df = df.loc[df.index.year >= 2015]\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "716038b0-8947-47ae-8343-d886890d97b9",
+   "metadata": {},
+   "source": [
+    "The dataset now encompasses measurements from January 2015 onward. This effectively addressed previous issues with missing data as well."
+   ]
   }
  ],
  "metadata": {
