Split the dataset
Perform a single set of train/test splits. Partition most recent data for testing purposes.

--- a/SolarPower.ipynb
+++ b/SolarPower.ipynb
@@ -549,6 +549,55 @@
     "\n",
     "Every year shows a steady variation, beginning with a gradual rise at the start of the year, reaching its high point mid-year, and then gradually declining towards a low point by the year's end. This pattern typically aligns with the peaks and troughs observed in the raw data plot, reinforcing the existence of a 12-month seasonal cycle."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f74cd9a-d900-4e5f-a47c-eae64e370402",
+   "metadata": {},
+   "source": [
+    "# Split the Dataset\n",
+    "\n",
+    "This analysis will utilize a single variable for prediction, necessitating the creation of a unified training and testing dataset.  Unlike problems addressed by linear regression or other supervised algorithms, it is important to maintain the integrity of the time series during the split, hence the use of shuffle = False.  This approach ensures that the test set comprises the final portion of the dataset, sequentially following the training set.\n",
+    "\n",
+    "The argument train_size = 80 specifies the allocation of a designated number of rows to the training set, with the remaining observations reserved for the test set.  While a more conventional split of 60% training and 40% testing is often used for larger datasets, this specific dataset experiences challenges in achieving stationarity with a limited number of training observations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "cd61af5b-d7fe-4e49-9353-66053ff9e4c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original set:      (87, 1)\n",
+      "------------------------------\n",
+      "Training features: (80, 1)\n",
+      "Testing features:  (7, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# There is only one variable, it is sufficient to perform a single set of train/test splits.\n",
+    "# Partition most recent data for testing purposes.\n",
+    "X_train, X_test = train_test_split(df, train_size=80, shuffle=False)\n",
+    "\n",
+    "# Contrast original data to training and testing sets.\n",
+    "print(f\"Original set:      {df.shape}\")\n",
+    "print(\"------------------------------\")\n",
+    "print(f\"Training features: {X_train.shape}\")\n",
+    "print(f\"Testing features:  {X_test.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8dbbda9-8c25-4b34-a11e-77a18c42285b",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
