Generate seasonal ARIMA model.

--- a/SolarPower.ipynb
+++ b/SolarPower.ipynb
@@ -597,6 +597,202 @@
    "cell_type": "markdown",
    "id": "c8dbbda9-8c25-4b34-a11e-77a18c42285b",
    "metadata": {},
+   "source": [
+    "# Implement Seasonal ARIMA Model\n",
+    "\n",
+    "The next step is to use the **ARIMA()** class from **statsmodels** to generate the model \n",
+    "\n",
+    "In the case of the non-seasonal **order** argument:\n",
+    "\n",
+    "- The lag count is set to 1 (p, representing autoregression).  \n",
+    "- The observations are differenced once (d, denoting integration).  \n",
+    "- The number of lagged error terms is 1 (q, indicating moving average).  \n",
+    "- The values provided are somewhat random and not definitively optimal, but they serve as a reasonable initial reference.\n",
+    "\n",
+    "In the **seasonal_order** parameter:\n",
+    "\n",
+    "- The values for p, d, and q remain identical.  \n",
+    "- The period is set to 12, which accommodates the yearly context of the electrical energy measurements you previously validated.  \n",
+    "- **_model_fit_** executes the model fitting. The training data was provided as the initial argument in ARIMA(), so there’s no need to specify it again here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c5f5025c-dd88-436e-b226-0d98d9f30e5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>SARIMAX Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>            <td>ElectNetGen</td>         <th>  No. Observations:  </th>    <td>80</td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>           <td>ARIMA(1, 1, 1)x(1, 1, 1, 12)</td> <th>  Log Likelihood     </th> <td>-513.687</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>                  <td>Sat, 09 Nov 2024</td>       <th>  AIC                </th> <td>1037.375</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                      <td>11:48:54</td>           <th>  BIC                </th> <td>1048.398</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Sample:</th>                   <td>01-31-2015</td>          <th>  HQIC               </th> <td>1041.737</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th></th>                         <td>- 08-31-2021</td>         <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>              <td>opg</td>             <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "      <td></td>        <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ar.L1</th>    <td>    0.6343</td> <td>    0.215</td> <td>    2.952</td> <td> 0.003</td> <td>    0.213</td> <td>    1.055</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ma.L1</th>    <td>   -0.8838</td> <td>    0.131</td> <td>   -6.732</td> <td> 0.000</td> <td>   -1.141</td> <td>   -0.627</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ar.S.L12</th> <td>   -0.9406</td> <td>    0.160</td> <td>   -5.879</td> <td> 0.000</td> <td>   -1.254</td> <td>   -0.627</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ma.S.L12</th> <td>    0.7601</td> <td>    0.353</td> <td>    2.151</td> <td> 0.032</td> <td>    0.067</td> <td>    1.453</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>sigma2</th>   <td> 2.473e+05</td> <td> 4.95e+04</td> <td>    4.998</td> <td> 0.000</td> <td>  1.5e+05</td> <td> 3.44e+05</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Ljung-Box (L1) (Q):</th>     <td>0.00</td> <th>  Jarque-Bera (JB):  </th> <td>4.75</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Q):</th>                <td>0.99</td> <th>  Prob(JB):          </th> <td>0.09</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Heteroskedasticity (H):</th> <td>2.34</td> <th>  Skew:              </th> <td>0.63</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(H) (two-sided):</th>    <td>0.05</td> <th>  Kurtosis:          </th> <td>3.37</td>\n",
+       "</tr>\n",
+       "</table><br/><br/>Warnings:<br/>[1] Covariance matrix calculated using the outer product of gradients (complex-step)."
+      ],
+      "text/latex": [
+       "\\begin{center}\n",
+       "\\begin{tabular}{lclc}\n",
+       "\\toprule\n",
+       "\\textbf{Dep. Variable:}          &         ElectNetGen          & \\textbf{  No. Observations:  } &     80      \\\\\n",
+       "\\textbf{Model:}                  & ARIMA(1, 1, 1)x(1, 1, 1, 12) & \\textbf{  Log Likelihood     } &  -513.687   \\\\\n",
+       "\\textbf{Date:}                   &       Sat, 09 Nov 2024       & \\textbf{  AIC                } &  1037.375   \\\\\n",
+       "\\textbf{Time:}                   &           11:48:54           & \\textbf{  BIC                } &  1048.398   \\\\\n",
+       "\\textbf{Sample:}                 &          01-31-2015          & \\textbf{  HQIC               } &  1041.737   \\\\\n",
+       "\\textbf{}                        &         - 08-31-2021         & \\textbf{                     } &             \\\\\n",
+       "\\textbf{Covariance Type:}        &             opg              & \\textbf{                     } &             \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "\\begin{tabular}{lcccccc}\n",
+       "                  & \\textbf{coef} & \\textbf{std err} & \\textbf{z} & \\textbf{P$> |$z$|$} & \\textbf{[0.025} & \\textbf{0.975]}  \\\\\n",
+       "\\midrule\n",
+       "\\textbf{ar.L1}    &       0.6343  &        0.215     &     2.952  &         0.003        &        0.213    &        1.055     \\\\\n",
+       "\\textbf{ma.L1}    &      -0.8838  &        0.131     &    -6.732  &         0.000        &       -1.141    &       -0.627     \\\\\n",
+       "\\textbf{ar.S.L12} &      -0.9406  &        0.160     &    -5.879  &         0.000        &       -1.254    &       -0.627     \\\\\n",
+       "\\textbf{ma.S.L12} &       0.7601  &        0.353     &     2.151  &         0.032        &        0.067    &        1.453     \\\\\n",
+       "\\textbf{sigma2}   &    2.473e+05  &     4.95e+04     &     4.998  &         0.000        &      1.5e+05    &     3.44e+05     \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "\\begin{tabular}{lclc}\n",
+       "\\textbf{Ljung-Box (L1) (Q):}     & 0.00 & \\textbf{  Jarque-Bera (JB):  } & 4.75  \\\\\n",
+       "\\textbf{Prob(Q):}                & 0.99 & \\textbf{  Prob(JB):          } & 0.09  \\\\\n",
+       "\\textbf{Heteroskedasticity (H):} & 2.34 & \\textbf{  Skew:              } & 0.63  \\\\\n",
+       "\\textbf{Prob(H) (two-sided):}    & 0.05 & \\textbf{  Kurtosis:          } & 3.37  \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "%\\caption{SARIMAX Results}\n",
+       "\\end{center}\n",
+       "\n",
+       "Warnings: \\newline\n",
+       " [1] Covariance matrix calculated using the outer product of gradients (complex-step)."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                                    SARIMAX Results                                     \n",
+       "========================================================================================\n",
+       "Dep. Variable:                      ElectNetGen   No. Observations:                   80\n",
+       "Model:             ARIMA(1, 1, 1)x(1, 1, 1, 12)   Log Likelihood                -513.687\n",
+       "Date:                          Sat, 09 Nov 2024   AIC                           1037.375\n",
+       "Time:                                  11:48:54   BIC                           1048.398\n",
+       "Sample:                              01-31-2015   HQIC                          1041.737\n",
+       "                                   - 08-31-2021                                         \n",
+       "Covariance Type:                            opg                                         \n",
+       "==============================================================================\n",
+       "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------\n",
+       "ar.L1          0.6343      0.215      2.952      0.003       0.213       1.055\n",
+       "ma.L1         -0.8838      0.131     -6.732      0.000      -1.141      -0.627\n",
+       "ar.S.L12      -0.9406      0.160     -5.879      0.000      -1.254      -0.627\n",
+       "ma.S.L12       0.7601      0.353      2.151      0.032       0.067       1.453\n",
+       "sigma2      2.473e+05   4.95e+04      4.998      0.000     1.5e+05    3.44e+05\n",
+       "===================================================================================\n",
+       "Ljung-Box (L1) (Q):                   0.00   Jarque-Bera (JB):                 4.75\n",
+       "Prob(Q):                              0.99   Prob(JB):                         0.09\n",
+       "Heteroskedasticity (H):               2.34   Skew:                             0.63\n",
+       "Prob(H) (two-sided):                  0.05   Kurtosis:                         3.37\n",
+       "===================================================================================\n",
+       "\n",
+       "Warnings:\n",
+       "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from statsmodels.tsa.arima.model import ARIMA\n",
+    "\n",
+    "# Values for p, d, and q are arbitrary.\n",
+    "forecast_model = ARIMA(\n",
+    "    X_train[\"ElectNetGen\"], order=(1, 1, 1), seasonal_order=(1, 1, 1, 12)\n",
+    ")\n",
+    "\n",
+    "model_fit = forecast_model.fit(method_kwargs={\"warn_convergence\": False})\n",
+    "model_fit.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "812ae4e6-e65d-4499-b3b4-a1048571f7c6",
+   "metadata": {},
+   "source": [
+    "**Please note** that the call to fit() is quelling a warning regarding the model's inability to optimize one of the statistical results. Despite this warning, the model remains valuable and applicable.\n",
+    "\n",
+    "**Spotlights** \n",
+    "\n",
+    "The output provides comprehensive insights regarding the model that has been recently trained, including:\n",
+    "\n",
+    "- The AR (Autoregressive), I (Integrated), and MA (Moving Average) hyperparameters for both non-seasonal and seasonal components.\n",
+    "- The span of the time series present in the training set, referred to as the \"sample.\"\n",
+    "- Model parameters (coefficients) associated with the autoregressive lag and moving average for both non-seasonal and seasonal aspects. Given that a value of 1 was assigned to each hyperparameter, there is only a single lag and one moving average for each component.\n",
+    "- Standard error and z-score values related to the lags and moving averages.\n",
+    "- p-values for the lags and moving averages, where values below the significance level of 0.05 are considered favorable. **This indicates the rejection of the null hypothesis that the lags and moving averages exert no significant influence on the model**. Since these values are indeed below 0.05, it can be confidently asserted that they have a meaningful impact on the model.\n",
+    "- Skewness and kurtosis values for the dataset.\n",
+    "- Additional relevant information."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abfd142c-20c6-47ff-bca2-c8a9e061364a",
+   "metadata": {},
    "source": []
   }
  ],
