Predict electricity production using the test dataset.

--- a/SolarPower.ipynb
+++ b/SolarPower.ipynb
@@ -793,7 +793,54 @@
    "cell_type": "markdown",
    "id": "abfd142c-20c6-47ff-bca2-c8a9e061364a",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Forecast Electricity Generation Utilizing the Test Set\n",
+    "\n",
+    "The next step will generate predictions that correspond to the time frame present in the test set.\n",
+    "\n",
+    "- The **start** parameter establishes the beginning of the prediction at the same time point as the commencement of the testing set. Similarly.\n",
+    "- The **end** parameter does the same for the final value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "93b19263-c33a-4128-8a4b-6bfcda270f9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2021-09    10117.965019\n",
+       "2021-10     9452.071859\n",
+       "2021-11     7785.946426\n",
+       "2021-12     7056.844581\n",
+       "2022-01     7802.637055\n",
+       "2022-02     8772.878581\n",
+       "2022-03    10759.825117\n",
+       "Freq: M, Name: predicted_mean, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Generate forecasts that align with the duration present in the test set.\n",
+    "preds = model_fit.predict(start=X_test.index[0], end=X_test.index[-1])\n",
+    "preds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62d9c733-1b4b-443a-b244-b87f1826f581",
+   "metadata": {},
+   "source": [
+    "**Spotlight** \n",
+    "\n",
+    "The model generated these predictions for the same timeframe as the testing set, which spans from **September 2021** to **March 2022**, encompassing the last 7 months of the complete dataset."
+   ]
   }
  ],
  "metadata": {
