Identify the difference between expected and the real values.

--- a/SolarPower.ipynb
+++ b/SolarPower.ipynb
@@ -841,6 +841,45 @@
     "\n",
     "The model generated these predictions for the same timeframe as the testing set, which spans from **September 2021** to **March 2022**, encompassing the last 7 months of the complete dataset."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bcbb29c-fda0-4a52-bbce-6d9440c7b8c8",
+   "metadata": {},
+   "source": [
+    "# Determine the Error Between the Predicted Values and the Actual Values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "97782887-9a0d-4327-b6b6-355115d9b649",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost (root mean squared error): 657.36\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error as mse\n",
+    "\n",
+    "cost = mse(X_test, preds, squared=False)\n",
+    "print(\"Cost (root mean squared error): {:.2f}\".format(cost))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de28ff12-dede-4145-a14d-fc3ab53e3f36",
+   "metadata": {},
+   "source": [
+    "**Spotlight** \n",
+    "\n",
+    "The **RMSE stands at 657.36**. It’s important to remember that each data point was measured in thousands of GWh."
+   ]
   }
  ],
  "metadata": {
