Forecast future solar-power electricity generation.

--- a/SolarPower.ipynb
+++ b/SolarPower.ipynb
@@ -277,7 +277,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/yk/_g2wb8q55v9gmytn656hxt7h0000gp/T/ipykernel_66268/2223087393.py:1: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "/var/folders/yk/_g2wb8q55v9gmytn656hxt7h0000gp/T/ipykernel_76270/2223087393.py:1: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  df.index = pd.to_datetime(df.index).to_period(\"M\")  # Specify months.\n"
      ]
     }
@@ -637,7 +637,7 @@
        "  <th>Date:</th>                  <td>Sat, 09 Nov 2024</td>       <th>  AIC                </th> <td>1037.375</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                      <td>13:10:22</td>           <th>  BIC                </th> <td>1048.398</td>\n",
+       "  <th>Time:</th>                      <td>14:03:06</td>           <th>  BIC                </th> <td>1048.398</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Sample:</th>                   <td>01-31-2015</td>          <th>  HQIC               </th> <td>1041.737</td>\n",
@@ -691,7 +691,7 @@
        "\\textbf{Dep. Variable:}          &         ElectNetGen          & \\textbf{  No. Observations:  } &     80      \\\\\n",
        "\\textbf{Model:}                  & ARIMA(1, 1, 1)x(1, 1, 1, 12) & \\textbf{  Log Likelihood     } &  -513.687   \\\\\n",
        "\\textbf{Date:}                   &       Sat, 09 Nov 2024       & \\textbf{  AIC                } &  1037.375   \\\\\n",
-       "\\textbf{Time:}                   &           13:10:22           & \\textbf{  BIC                } &  1048.398   \\\\\n",
+       "\\textbf{Time:}                   &           14:03:06           & \\textbf{  BIC                } &  1048.398   \\\\\n",
        "\\textbf{Sample:}                 &          01-31-2015          & \\textbf{  HQIC               } &  1041.737   \\\\\n",
        "\\textbf{}                        &         - 08-31-2021         & \\textbf{                     } &             \\\\\n",
        "\\textbf{Covariance Type:}        &             opg              & \\textbf{                     } &             \\\\\n",
@@ -728,7 +728,7 @@
        "Dep. Variable:                      ElectNetGen   No. Observations:                   80\n",
        "Model:             ARIMA(1, 1, 1)x(1, 1, 1, 12)   Log Likelihood                -513.687\n",
        "Date:                          Sat, 09 Nov 2024   AIC                           1037.375\n",
-       "Time:                                  13:10:22   BIC                           1048.398\n",
+       "Time:                                  14:03:06   BIC                           1048.398\n",
        "Sample:                              01-31-2015   HQIC                          1041.737\n",
        "                                   - 08-31-2021                                         \n",
        "Covariance Type:                            opg                                         \n",
@@ -951,6 +951,173 @@
     "- The forecasted electrical energy generation for each monthly assessment is depicted as a blue dot in a scatter plot. The greater the distance of the dot from the line, the larger the discrepancy between the predicted and actual figures.\n",
     "- It is evident that some predictions are relatively close to the line, such as month 11 (November 2021) and month 01 (January 2022).\n",
     "- Conversely, some predictions are more distant, like month 09 (September 2021) and month 03 (March 2022)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f45dbe4-6004-49ef-b3d6-c5e14c75ff2f",
+   "metadata": {},
+   "source": [
+    "# Forecast Future Electricity Generation Values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "555b0013-a9c7-48ec-bbaa-05067069523f",
+   "metadata": {},
+   "source": [
+    "**Forecast one year out** "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "628255c5-8889-413a-8647-30b8c65400c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forecasts = model_fit.predict(start=\"2022-04\", end=\"2023-03\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1afe34fa-82e4-4c32-9da7-e468f68cccf9",
+   "metadata": {},
+   "source": [
+    "**Create new data frame for forecasting results**\n",
+    "\n",
+    "The next step is to create a new data frame designed to store the forecasted values along with date values for the historical dates. This will simplify the plotting process."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "cb1d3bc2-273f-41fb-98f6-934e64fbf22a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forecasts = forecasts.rename(\"ElectNetGen\")\n",
+    "forecasts_dataframe = pd.DataFrame(\n",
+    "    forecasts, index=forecasts.index, columns=[\"ElectNetGen\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "219aa9ad-7bf2-4c99-93a0-05028db5ee3c",
+   "metadata": {},
+   "source": [
+    "**Display Forecasts** \n",
+    "\n",
+    "The projected electrical energy production figures (in GWh) for the upcoming 12 months in the U.S.."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "5ee3e567-5135-4674-be72-f35123a0aa77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ElectNetGen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-04</th>\n",
+       "      <td>12474.756751</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-05</th>\n",
+       "      <td>14213.995501</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-06</th>\n",
+       "      <td>13699.266752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-07</th>\n",
+       "      <td>14052.296620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-08</th>\n",
+       "      <td>13623.330043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-09</th>\n",
+       "      <td>11883.337936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10</th>\n",
+       "      <td>11139.780986</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11</th>\n",
+       "      <td>9740.030456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-12</th>\n",
+       "      <td>9023.381319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-01</th>\n",
+       "      <td>9639.802747</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-02</th>\n",
+       "      <td>10328.214345</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03</th>\n",
+       "      <td>13125.845335</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ElectNetGen\n",
+       "2022-04  12474.756751\n",
+       "2022-05  14213.995501\n",
+       "2022-06  13699.266752\n",
+       "2022-07  14052.296620\n",
+       "2022-08  13623.330043\n",
+       "2022-09  11883.337936\n",
+       "2022-10  11139.780986\n",
+       "2022-11   9740.030456\n",
+       "2022-12   9023.381319\n",
+       "2023-01   9639.802747\n",
+       "2023-02  10328.214345\n",
+       "2023-03  13125.845335"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "forecasts_dataframe.head(12)"
    ]
   }
  ],
